# xblock-proctor-exam

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  setup.cfg  setup.py
.circleci/: config.yml
config/: settings.yml.dist
config/cms/: docker_run_development.py
config/lms/: docker_run_development.py
proctor_exam/: __init__.py  proctor_exam.py
proctor_exam/locale/fr/LC_MESSAGES/: django.mo  django.po
proctor_exam/static/css/: student.css
proctor_exam/static/html/: honor.html  sequence.html  student.html  studio.html
