;;
;; FUN package
;;
[metadata]
name = xblock-proctor-exam
version = 0.8.0-alpha
description =
long_description = file: README.md
author = Open FUN (France Universite Numésrique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/xblock-proctor-exams
license= AGPL 3.0
keywords = Django, Open edX, MOOC, Xblock, proctoring
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    XBlock
    XBlock-utils
    configurable-lti-consumer-xblock
packages = find:
zip_safe = False

[options.entry_points]
xblock.v1 =
    proctor_exam = proctor_exam:ProctorExamXBlock

[options.extras_require]
dev =
    wheel

[wheel]
universal = 1
