;;
;; FUN package
;;
[metadata]
name = xblock-proctor-exam
version = v0.8.2-beta
description = Xblock restricting access to course test to Proctor Exam monitoring process.
long_description = file: README.md
author = Open FUN (France Universite Numérique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/xblock-proctor-exam
license = AGPL 3.0
keywords = Django, Open edX, MOOC, Xblock, proctoring
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    XBlock
    XBlock-utils
    configurable-lti-consumer-xblock
packages = proctor_exam
zip_safe = False

[options.entry_points]
xblock.v1 =
    proctor_exam = proctor_exam:ProctorExamXBlock

[options.extras_require]
dev =
    twine==1.11.0

[options.package_data]
proctor_exam =
    public/images/*.png
    static/css/*.css
    static/html/*.html
    locale/*

[bdist_wheel]
universal = 1

[pep8]
ignore=E501
max_line_length=120
exclude=settings